added docs again

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,7 +16,9 @@ jobs:
         with:
           version: '1.11'
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: |
+          julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+          julia --project=docs/ -e 'using Pkg; Pkg.add(["ArchGDAL", "CSV", "DataFrames", "Dates", "GeoInterface", "GeoJSON", "GDAL", "GeometryBasics", "JSON3", "Pkg", "Plots", "Polynomials", "Statistics"])'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
